# rag-practice

./: .gitignore  pyproject.toml
notebooks/: document.ipynb
